Fixed line break in knockout podium

--- a/css/knockout.css
+++ b/css/knockout.css
@@ -27,6 +27,7 @@ main {
     align-items: flex-end;
     border-bottom: 2px solid rgba(0, 0, 0, 0.4);
     padding: 0 20%;
+    white-space: nowrap;
 }
 
 .podium .first-podium, .podium .second-podium, .podium .third-podium {
